--- a/platformio.ini
+++ b/platformio.ini
@@ -10,13 +10,16 @@
 
 [env]
 monitor_speed = 500000
+monitor_filters = esp32_exception_decoder
 build_flags =
   -DCORE_DEBUG_LEVEL=5
-  -DBOARD_HAS_PSRAM 
-board_upload.flash_size = 32MB
+  -DBOARD_HAS_PSRAM
+board_upload.flash_size = 16MB
 board_build.partitions = default_16MB.csv
-board_build.arduino.memory_type = opi_opi
+board_build.arduino.memory_type = qio_opi
 board_build.flash_mode = qio
+
+build_type = debug
 
 [env:esp32s3usbotg]
 platform = espressif32
