feat: solenoid control with ws updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,9 @@
     "string_view": "c",
     "initializer_list": "c",
     "spi.h": "c",
-    "pins.h": "c"
+    "pins.h": "c",
+    "adc.h": "c",
+    "battery.h": "c",
+    "ws_handler.h": "c"
   }
 }
