--- a/platformio.ini
+++ b/platformio.ini
@@ -11,9 +11,11 @@
 [env]
 monitor_speed = 500000
 monitor_filters = esp32_exception_decoder
+build_unflags = -Os -O2
 build_flags =
   -DCORE_DEBUG_LEVEL=5
   -DBOARD_HAS_PSRAM
+  -O3
 board_upload.flash_size = 16MB
 board_build.partitions = default_16MB.csv
 board_build.arduino.memory_type = qio_opi
